--- a/excersice-01/index.html
+++ b/excersice-01/index.html
@@ -9,7 +9,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<section>
+    <div>
+        <div id="value1">A</div>
+    </div>
 
+    <div>
+        <div id="value2">B</div>
+    </div>
+
+    <div>
+        <div id="value3">C</div>
+    </div>
+
+    <div>
+        <div id="value4">D</div>
+    </div>
+
+    <div>
+        <div id="value5">E</div>
+    </div>
+
+    <div>
+        <div id="value6">F</div>
+    </div>
+</section>
 
 <script src="../assets/lib/jquery-3.7.1.min.js"></script>
 <script src="script.js"></script>
