--- a/excersice-01/index.html
+++ b/excersice-01/index.html
@@ -9,31 +9,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section>
-    <div>
-        <div id="value1">A</div>
-    </div>
+<main>
+    <section id="boxes">
+        <div>
+            <img src="../assets/img/man%20walking.gif" alt="">
+            <div id="value1">A</div>
+        </div>
 
-    <div>
-        <div id="value2">B</div>
-    </div>
+        <div>
+            <img src="../assets/img/man%20walking.gif" alt="">
+            <div id="value2">B</div>
+        </div>
 
-    <div>
-        <div id="value3">C</div>
-    </div>
+        <div>
+            <img src="../assets/img/man%20walking.gif" alt="">
+            <div id="value3">C</div>
+        </div>
 
-    <div>
-        <div id="value4">D</div>
-    </div>
+        <div>
+            <img src="../assets/img/man%20walking.gif" alt="">
+            <div id="value4">D</div>
+        </div>
 
-    <div>
-        <div id="value5">E</div>
-    </div>
+        <div>
+            <img src="../assets/img/man%20walking.gif" alt="">
+            <div id="value5">E</div>
+        </div>
 
-    <div>
-        <div id="value6">F</div>
-    </div>
-</section>
+        <div>
+            <img src="../assets/img/man%20walking.gif" alt="">
+            <div id="value6">F</div>
+        </div>
+    </section>
+</main>
+
 
 <script src="../assets/lib/jquery-3.7.1.min.js"></script>
 <script src="script.js"></script>
