few changes in styles

--- a/excersice-01/index.html
+++ b/excersice-01/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <main>
+
     <section id="boxes">
         <div>
             <img src="../assets/img/man%20walking.gif" alt="">
@@ -40,6 +41,10 @@
             <img src="../assets/img/man%20walking.gif" alt="">
             <div id="value6">F</div>
         </div>
+    </section>
+
+    <section>
+        <img src="../assets/img/home.gif" title="image of a home" alt="home-image" id="home-image">
     </section>
 </main>
 
