--- a/excersice-02/index.html
+++ b/excersice-02/index.html
@@ -12,12 +12,12 @@
 <main>
     <hr>
     <section id="color-panel">
-        <div id="value1"></div>
-        <div id="value2"></div>
-        <div id="value3"></div>
-        <div id="value4"></div>
-        <div id="value5"></div>
-        <div id="value6"></div>
+        <div id="color1"></div>
+        <div id="color2"></div>
+        <div id="color3"></div>
+        <div id="color4"></div>
+        <div id="color5"></div>
+        <div id="color6"></div>
     </section>
 
     <hr>
